--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
+
+$font_0: Roboto;
+$font_1: Arial;
+$font_2: sans-serif;
+
+* {
+  box-sizing: border-box;
+	font-family: $font_0, $font_1, $font_2;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  margin: 0;
+  padding: 0;
+  border-width: 0;
+}
+
+.hidden {
+  display: none !important;
+}
