Feat: #2 - Added components: modal, action, header

--- a/src/app/components/as-tour-list/as-tour-list.component.html
+++ b/src/app/components/as-tour-list/as-tour-list.component.html
@@ -11,3 +11,9 @@
     </section>
   </div>
 </ng-container>
+
+<ng-container *ngIf="isModalOpen">
+  <as-modal (OnClose)="onModalClose()">
+    <as-action [Tour]="Tour" (OnClose)="onModalClose()"></as-action>
+  </as-modal>
+</ng-container>
