--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -6,12 +6,17 @@ $white: white;
 $color_wild_watermelon_approx: #f64c73;
 $color_crimson_approx: #db1a46;
 $color_cerise_red_approx: #e6365f;
+$color_lick_and_kiss_approx: #f06586;
 
 $color_java_approx: #20d2bb;
 $color_caribbean_green_approx: #10bba7;
 $color_riptide_approx: #7cddcd;
+$color_oasis_stream_approx: #a8ebdf;
 
 $color_heliotrope_approx: #c873f4;
 $color_fuchsia_pink_approx: #b752eb;
 $color_glicine_approx: #c57aeb;
+$color_plasma_trail_approx: #d29eec;
 
+$light: #ffffff;
+$dark: #000000;
