--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -6,7 +6,7 @@ $white: white;
 $color_wild_watermelon_approx: #f64c73;
 $color_crimson_approx: #db1a46;
 $color_cerise_red_approx: #e6365f;
-$color_lick_and_kiss_approx: #f06586;
+$color_lick_and_kiss_approx: #e7a3b3;
 
 $color_java_approx: #20d2bb;
 $color_caribbean_green_approx: #10bba7;
