--- a/src/app/components/as-navbar/styles/as-navbar.component.scss
+++ b/src/app/components/as-navbar/styles/as-navbar.component.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   background-color: $color_fiord_approx;
   box-shadow: 2px 2px 9px 3px rgb(0 0 0 / 86%);
+  color: white;
 
   .hamburger-menu {
     display: none;
