--- a/src/app/components/sections/as-email/as-email.component.html
+++ b/src/app/components/sections/as-email/as-email.component.html
@@ -1,3 +1,25 @@
 <section class="wrapper {{Tour.color}}">
+  <ng-container *ngIf="emailSubmitting">
 
+  </ng-container>
+  <form [formGroup]="emailForm" class="emailForm" (ngSubmit)="onClickSubmit($event)">
+    <label>
+      <span>Subject:</span>
+      <input formControlName="subject" name='subject' type="text" placeholder="Email subject..." />
+    </label>
+    <label>
+      <span>To:</span>
+      <input formControlName="to" name='to' type="email" placeholder="Email recipient..." readonly />
+    </label>
+    <label>
+      <span>From:</span>
+      <input formControlName="from" name='from' type="email" placeholder="Your email..." />
+    </label>
+    <label>
+      <span>Message:</span>
+      <textarea formControlName="message" name='message' type="text" placeholder="Your Message..."></textarea>
+    </label>
+
+    <button type="submit" disabled="{{emailForm.invalid ? emailForm.invalid: null}}">Send email</button>
+  </form>
 </section>
