--- a/src/app/components/sections/as-email/styles/as-email-watermelon.component.scss
+++ b/src/app/components/sections/as-email/styles/as-email-watermelon.component.scss
@@ -1,5 +1,5 @@
 @import '../../../../../styles/palette.scss';
 
 .wrapper.watermelon {
-  background-color: $color_crimson_approx;
+  background-color: $color_lick_and_kiss_approx;
 }
