--- a/src/app/components/sections/as-email/styles/as-email.component.scss
+++ b/src/app/components/sections/as-email/styles/as-email.component.scss
@@ -3,8 +3,45 @@
 
 :host {
   width: 100%;
+  min-height: 40vh;
+  display: flex;
+  align-items: center;
+  padding: 2%;
 }
 
 .wrapper {
+  font-size: 13px;
+  width: 100%;
 
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    label {
+      display: flex;
+      flex-direction: column;
+      gap: .2rem;
+
+      span {
+        font-weight: bold;
+      }
+
+      input {
+
+      }
+
+      textarea {
+        width: 100%;
+        resize: vertical;
+      }
+    }
+
+    button[type=submit] {
+      width: 50%;
+      align-self: flex-end;
+      padding: 2% 1%;
+      background-color: white;
+    }
+  }
 }
