--- a/src/app/components/sections/as-gallery/styles/as-gallery.component.scss
+++ b/src/app/components/sections/as-gallery/styles/as-gallery.component.scss
@@ -6,13 +6,16 @@
   min-height: 40vh;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .wrapper {
   font-size: 13px;
   width: 100%;
+  height: 100%;
   padding: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   .items {
     display: flex;
