--- a/src/app/components/sections/as-email/as-email-form/styles/as-email-form.component.scss
+++ b/src/app/components/sections/as-email/as-email-form/styles/as-email-form.component.scss
@@ -14,7 +14,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 2%;
+  padding: 4% 2%;
 
   button {
     width: 30%;
@@ -24,6 +24,7 @@
   }
 
   form {
+    flex: 1;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -31,6 +32,7 @@
     overflow-y: auto;
 
     label {
+      flex: 1;
       display: flex;
       flex-direction: column;
       gap: .2rem;
@@ -40,16 +42,18 @@
       }
 
       input {
-
+        min-height: 38px;
       }
 
       textarea {
+        min-height: 31px;
         width: 100%;
         resize: vertical;
       }
     }
 
     button[type=submit] {
+      min-height: 35px;
       align-self: flex-end;
     }
   }
