--- a/src/app/components/sections/as-email/as-email-form/as-email-form.component.html
+++ b/src/app/components/sections/as-email/as-email-form/as-email-form.component.html
@@ -33,6 +33,8 @@
       <textarea formControlName="tourDate" name='tourDate' type="date" placeholder="Tour date..."></textarea>
     </label>
 
-    <button type="submit" disabled="{{emailForm.invalid ? emailForm.invalid: null}}">Send email</button>
+    <div class="buttons-container">
+      <button type="submit" disabled="{{emailForm.invalid ? emailForm.invalid: null}}">Send email</button>
+    </div>
   </form>
 </section>
