--- a/src/app/components/sections/as-email/as-email-form/styles/as-email-form.component.scss
+++ b/src/app/components/sections/as-email/as-email-form/styles/as-email-form.component.scss
@@ -1,4 +1,5 @@
 :host {
+  overflow: hidden;
   width: 100%;
   height: 100%;
   display: flex;
@@ -16,26 +17,19 @@
   justify-content: center;
   padding: 4% 2%;
 
-  button {
-    width: 30%;
-    padding: 2% 1%;
-    background-color: white;
-    aspect-ratio: 5/2;
-  }
-
   form {
     flex: 1;
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 4%;
     overflow-y: auto;
 
     label {
       flex: 1;
       display: flex;
       flex-direction: column;
-      gap: .2rem;
+      gap: .2%;
 
       span {
         font-weight: bold;
@@ -43,18 +37,40 @@
 
       input {
         min-height: 38px;
+        width: 100%;
+        border-width: 1px;
+        padding: 1px 2px;
+        flex: 1;
       }
 
       textarea {
-        min-height: 31px;
+        min-height: 38px;
         width: 100%;
+        border-width: 1px;
+        padding: 1px 2px;
         resize: vertical;
+        flex: 1;
       }
     }
 
-    button[type=submit] {
-      min-height: 35px;
-      align-self: flex-end;
+    .buttons-container {
+      width: 100%;
+      height: 15%;
+      display: flex;
+      flex-direction: row;
+      margin-top: 2%;
+      justify-content: flex-end;
+
+      button[type=submit] {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 70px;
+        min-height: 38px;
+        height: 100%;
+        background-color: white;
+        aspect-ratio: 5/2;
+      }
     }
   }
 }
