--- a/src/app/components/sections/as-email/as-email-processing/styles/as-email-processing.component.scss
+++ b/src/app/components/sections/as-email/as-email-processing/styles/as-email-processing.component.scss
@@ -1,4 +1,5 @@
 :host {
+  overflow: hidden;
   width: 100%;
   height: 100%;
   display: flex;
@@ -22,6 +23,7 @@
     align-items: center;
 
     .svg-container {
+      width: 40%;
       margin: 5%;
     }
   }
