--- a/src/app/components/sections/as-email/as-email-submission-result/styles/as-email-submission-result.component.scss
+++ b/src/app/components/sections/as-email/as-email-submission-result/styles/as-email-submission-result.component.scss
@@ -1,4 +1,5 @@
 :host {
+  overflow: hidden;
   width: 100%;
   height: 100%;
   display: flex;
@@ -20,20 +21,26 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 0.5em;
   }
 
   .buttons-container {
     width: 100%;
+    height: 15%;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    row-gap: 3%;
     margin-top: 5%;
+    justify-content: space-around;
+    align-items: center;
+    row-gap: 3%;
 
     button {
-      width: 30%;
-      padding: 2% 1%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 70px;
+      min-height: 38px;
+      height: 100%;
       background-color: white;
       aspect-ratio: 5/2;
     }
