--- a/src/app/components/sections/as-email/as-email-form/styles/as-email-form.component.scss
+++ b/src/app/components/sections/as-email/as-email-form/styles/as-email-form.component.scss
@@ -46,20 +46,21 @@
       textarea {
         min-height: 38px;
         width: 100%;
+        height: 100%;
         border-width: 1px;
         padding: 1px 2px;
         resize: vertical;
-        flex: 1;
       }
     }
 
     .buttons-container {
       width: 100%;
-      height: 15%;
+      flex: 1;
       display: flex;
       flex-direction: row;
-      margin-top: 2%;
       justify-content: flex-end;
+      margin: 3% 0;
+
 
       button[type=submit] {
         display: flex;
