--- a/src/app/components/sections/as-email/as-email-submission-result/styles/as-email-submission-result.component.scss
+++ b/src/app/components/sections/as-email/as-email-submission-result/styles/as-email-submission-result.component.scss
@@ -29,7 +29,7 @@
     height: 15%;
     display: flex;
     flex-direction: row;
-    margin-top: 5%;
+    margin: 3% 0;
     justify-content: space-around;
     align-items: center;
     row-gap: 3%;
