--- a/src/app/components/sections/as-info/styles/as-info-java.component.scss
+++ b/src/app/components/sections/as-info/styles/as-info-java.component.scss
@@ -2,4 +2,22 @@
 
 .wrapper.java {
   background-color: $color_oasis_stream_approx;
+
+  .left {
+
+    .header {
+
+      .title {
+
+      }
+    }
+
+    .body {
+
+    }
+  }
+
+  .right {
+    border-left-color: $color_caribbean_green_approx;
+  }
 }
