--- a/src/app/components/sections/as-info/styles/as-info.component.scss
+++ b/src/app/components/sections/as-info/styles/as-info.component.scss
@@ -2,9 +2,49 @@
 @import '../../../../../styles/built-in-tags.scss';
 
 :host {
-  width: 100%;
+  display: flex;
 }
 
 .wrapper {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 5% 2%;
 
+  .left {
+    height: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1%;
+
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      margin-bottom: 5%;
+
+      .title {
+
+      }
+    }
+
+    .body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      flex: 1;
+      min-width: 240px;
+    }
+  }
+
+  .right {
+    height: 100%;
+    border-left-width: 1px;
+    border-left-style: solid;
+  }
 }
