--- a/src/app/components/as-main/styles/as-main.component.scss
+++ b/src/app/components/as-main/styles/as-main.component.scss
@@ -1,4 +1,11 @@
+:host {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 section {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   as-navbar {
