Feat: #13 - Added tour info

--- a/src/app/components/sections/as-email/as-email-form/as-email-form.component.html
+++ b/src/app/components/sections/as-email/as-email-form/as-email-form.component.html
@@ -25,12 +25,16 @@
       <textarea formControlName="tourTitle" name='tourTitle' type="text" placeholder="Tour title..."></textarea>
     </label>
     <label class="hidden">
-      <span>Tour start:</span>
-      <textarea formControlName="tourStart" name='tourStart' type="text" placeholder="Tour start..."></textarea>
+      <span>Stops</span>
+      <textarea formControlName="stops" name='stops' type="text" placeholder="Stops..."></textarea>
     </label>
     <label class="hidden">
-      <span>Tour date:</span>
-      <textarea formControlName="tourDate" name='tourDate' type="date" placeholder="Tour date..."></textarea>
+      <span>Tour start:</span>
+      <textarea formControlName="start" name='start' type="date" placeholder="Tour start..."></textarea>
+    </label>
+    <label class="hidden">
+      <span>Tour end:</span>
+      <textarea formControlName="end" name='end' type="date" placeholder="Tour end..."></textarea>
     </label>
 
     <div class="buttons-container">
