--- a/src/app/components/as-tour-list/as-tour-list.component.html
+++ b/src/app/components/as-tour-list/as-tour-list.component.html
@@ -7,7 +7,8 @@
     </as-menu-item>
     <section class="info">
       <span class="title">{{Tour.title}}</span>
-      <span class="date">{{Tour.date | date: 'short'}}</span>
+      <span class="date">{{Tour.period.start| date: 'mediumDate'}}</span>
+      <span class="date">{{Tour.period.end | date: 'mediumDate'}}</span>
     </section>
   </div>
 </ng-container>
