--- a/src/app/components/sections/as-info/as-info.component.html
+++ b/src/app/components/sections/as-info/as-info.component.html
@@ -6,14 +6,29 @@
       </h2>
     </div>
     <div class="body">
-      <span>This tour starts at</span>
-      <span>{{Tour.date | date: 'shortTime'}}</span>
-      <span>on</span>
-      <span>{{Tour.date | date: 'fullDate'}}.</span>
-      <span>Meeting at</span>
-      <span>{{Tour.start.street}} {{Tour.start.number}}</span>
-      <span>in</span>
-      <span>{{Tour.start.city}}, {{Tour.start.country}}.</span>
+      <span>From:</span>
+      <span>{{Tour.period.start | date: 'fullDate'}}</span>
+      <span>to:</span>
+      <span>{{Tour.period.end | date: 'fullDate'}}.</span>
+      <span>Price:</span>
+      <span>{{Tour.price.single}} {{Tour.price.currency}} single</span>
+      <span>{{Tour.price.couple}} {{Tour.price.currency}} couple</span>
+      <span>Stops:</span>
+      <ul>
+        <ng-container *ngFor="let stop of Tour.stops">
+          <li>
+            <span>{{stop.name}}</span>
+          </li>
+        </ng-container>
+      </ul>
+      <span>Services:</span>
+      <ul>
+        <ng-container *ngFor="let service of Tour.services">
+          <li>
+            <span>{{service}}</span>
+          </li>
+        </ng-container>
+      </ul>
     </div>
   </section>
   <ng-container *ngIf="false">
