Fix: #14 - Fixed email forms names

--- a/src/app/components/sections/as-email/as-email-form/as-email-form.component.html
+++ b/src/app/components/sections/as-email/as-email-form/as-email-form.component.html
@@ -18,23 +18,23 @@
     </label>
     <label class="hidden">
       <span>Tour id:</span>
-      <textarea formControlName="tourId" name='tourId' type="NUMBER" placeholder="Tour id..."></textarea>
+      <input formControlName="tourId" name='tourId' type="NUMBER" placeholder="Tour id..." />
     </label>
     <label class="hidden">
       <span>Tour title:</span>
-      <textarea formControlName="tourTitle" name='tourTitle' type="text" placeholder="Tour title..."></textarea>
+      <input formControlName="tourTitle" name='tourTitle' type="text" placeholder="Tour title..." />
     </label>
     <label class="hidden">
       <span>Stops</span>
-      <textarea formControlName="stops" name='stops' type="text" placeholder="Stops..."></textarea>
+      <input formControlName="stops" name='stops' type="text" placeholder="Stops..." />
     </label>
     <label class="hidden">
       <span>Tour start:</span>
-      <textarea formControlName="start" name='start' type="date" placeholder="Tour start..."></textarea>
+      <input formControlName="start" name='start' type="date" placeholder="Tour start..." />
     </label>
     <label class="hidden">
       <span>Tour end:</span>
-      <textarea formControlName="end" name='end' type="date" placeholder="Tour end..."></textarea>
+      <input formControlName="end" name='end' type="date" placeholder="Tour end..." />
     </label>
 
     <div class="buttons-container">
