--- a/src/app/components/sections/as-info/as-info.component.html
+++ b/src/app/components/sections/as-info/as-info.component.html
@@ -6,10 +6,8 @@
       </h2>
     </div>
     <div class="body">
-      <span>From:</span>
-      <span>{{Tour.period.start | date: 'fullDate'}}</span>
-      <span>to:</span>
-      <span>{{Tour.period.end | date: 'fullDate'}}.</span>
+      <span>From: {{Tour.period.start | date: 'fullDate'}}</span>
+      <span>to: {{Tour.period.end | date: 'fullDate'}}.</span>
       <span>Price:</span>
       <span>{{Tour.price.single}} {{Tour.price.currency}} single</span>
       <span>{{Tour.price.couple}} {{Tour.price.currency}} couple</span>
