--- a/src/app/components/sections/as-email/as-email-form/as-email-form.component.html
+++ b/src/app/components/sections/as-email/as-email-form/as-email-form.component.html
@@ -1,27 +1,27 @@
 <section class="wrapper {{Tour.color}}">
   <form #form="ngForm" [formGroup]="emailForm" class="emailForm" (ngSubmit)="onFormSubmit()">
     <label>
-      <span>Subject:</span>
+      <span>Subject</span>
       <input formControlName="subject" name='subject' type="text" placeholder="Email subject..." />
     </label>
     <label>
-      <span>To:</span>
+      <span>To</span>
       <input formControlName="to" name='to' type="email" placeholder="Email recipient..." readonly />
     </label>
     <label>
-      <span>From:</span>
+      <span>From</span>
       <input formControlName="from" name='from' type="email" placeholder="Your email..." />
     </label>
     <label>
-      <span>Message:</span>
+      <span>Message</span>
       <textarea formControlName="message" name='message' type="text" placeholder="Your Message..."></textarea>
     </label>
     <label class="hidden">
-      <span>Tour id:</span>
+      <span>Tour id</span>
       <input formControlName="tourId" name='tourId' type="NUMBER" placeholder="Tour id..." />
     </label>
     <label class="hidden">
-      <span>Tour title:</span>
+      <span>Tour title</span>
       <input formControlName="tourTitle" name='tourTitle' type="text" placeholder="Tour title..." />
     </label>
     <label class="hidden">
