Feat: #15 - Styled info section

--- a/src/app/components/sections/as-info/as-info-menu/styles/as-info-menu-java.component.scss
+++ b/src/app/components/sections/as-info/as-info-menu/styles/as-info-menu-java.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/palette.scss';
+@import '../../../../../../styles/palette.scss';
 
 .wrapper.java {
   background-color: $color_oasis_stream_approx;
@@ -8,7 +8,7 @@
     .header {
 
       .title {
-        color: $color_caribbean_green_approx;
+
       }
     }
 
