--- a/src/app/components/sections/as-info/as-info-menu/styles/as-info-menu-heliotrope.component.scss
+++ b/src/app/components/sections/as-info/as-info-menu/styles/as-info-menu-heliotrope.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/palette.scss';
+@import '../../../../../../styles/palette.scss';
 
 .wrapper.heliotrope {
   background-color: $color_plasma_trail_approx;
@@ -8,7 +8,7 @@
     .header {
 
       .title {
-        color: $color_fuchsia_pink_approx;
+
       }
     }
 
