--- a/src/app/components/sections/as-info/as-info-menu/styles/as-info-menu-watermelon.component.scss
+++ b/src/app/components/sections/as-info/as-info-menu/styles/as-info-menu-watermelon.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/palette.scss';
+@import '../../../../../../styles/palette.scss';
 
 .wrapper.watermelon {
   background-color: $color_lick_and_kiss_approx;
@@ -8,7 +8,7 @@
     .header {
 
       .title {
-        color: $color_crimson_approx;
+
       }
     }
 
