--- a/src/app/components/sections/as-info/as-info-menu/styles/as-info-menu.component.scss
+++ b/src/app/components/sections/as-info/as-info-menu/styles/as-info-menu.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../../styles/palette.scss';
-@import '../../../../../styles/built-in-tags.scss';
+@import '../../../../../../styles/palette.scss';
+@import '../../../../../../styles/built-in-tags.scss';
 
 :host {
   display: flex;
@@ -7,11 +7,7 @@
 
 .wrapper {
   display: flex;
-  flex: 1;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: 5% 2%;
+  flex-direction: column;
 
   .left {
     height: 100%;
@@ -25,9 +21,10 @@
       align-items: center;
       justify-content: center;
       font-weight: bold;
+      margin-bottom: 5%;
 
       .title {
-        font-size: 18px;
+
       }
     }
 
