Feat: #16 - Added info section side menu

--- a/src/app/components/as-menu-item/as-menu-item.component.html
+++ b/src/app/components/as-menu-item/as-menu-item.component.html
@@ -27,7 +27,7 @@
       <g class="circles-group" transform="translate(-20 0)">
         <g class="circle" (click)="onClickInfo()">
           <title>Show information</title>
-          <circle class="back-circle" r="22" fill="#ffffff"></circle>
+          <circle r="22" fill="#ffffff"></circle>
           <svg as-info-svg [Color]="Color" x="-11" y="-11" width="22" height="22" stroke-width="0"></svg>
 
           <animateMotion attributeType="xml" begin="indefinite" fill="freeze" repeatCount="1" calcMode="spline"
@@ -41,7 +41,7 @@
 
         <g class="circle" (click)="onClickEmail()">
           <title>Write us</title>
-          <circle class="back-circle" r="22" fill="#ffffff"></circle>
+          <circle r="22" fill="#ffffff"></circle>
           <svg as-email-svg [Color]="Color" x="-11" y="-11" width="22" height="22" stroke-width="2"></svg>
 
           <animateMotion attributeType="xml" begin="indefinite" fill="freeze" repeatCount="1" calcMode="spline"
@@ -53,7 +53,7 @@
 
         <g class="circle" (click)="onClickGallery()">
           <title>See gallery</title>
-          <circle class="back-circle" r="22" fill="#ffffff"></circle>
+          <circle r="22" fill="#ffffff"></circle>
           <svg as-camera-svg [Color]="Color" x="-11" y="-11" width="22" height="22" stroke-width="5"></svg>
 
           <animateMotion attributeType="xml" begin="indefinite" fill="freeze" repeatCount="1" calcMode="spline"
