--- a/src/app/components/headers/as-title-rolling/as-header.component.html
+++ b/src/app/components/headers/as-title-rolling/as-header.component.html
@@ -1,9 +1,8 @@
 <section class="wrapper {{Color}}">
   <div class="left-side">
     <div class="rolling-svg-container">
-      <svg class="back-circle" version="1.1" xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 128 128" xml:space="preserve" width="100%"
-        height="100%">
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        viewBox="0 0 128 128" xml:space="preserve" width="100%" height="100%">
         <g class="circle">
           <circle cx="50%" cy="50%" r="50%" fill="#ffffff"></circle>
           <ng-container [ngSwitch]="Action.id">
