--- a/src/app/components/sections/as-action/styles/as-action.component.scss
+++ b/src/app/components/sections/as-action/styles/as-action.component.scss
@@ -6,13 +6,13 @@
 
 .modal-wrapper {
   width: 100%;
-  height: 100%;
+  max-height: 95%;
   display: flex;
   flex-direction: column;
 
   .body {
     flex: 1;
     min-height: 30vh;
-    overflow: hidden;
+    overflow-y: auto;
   }
 }
