--- a/src/app/components/sections/as-info/as-info-menu/as-info-menu.component.html
+++ b/src/app/components/sections/as-info/as-info-menu/as-info-menu.component.html
@@ -1,2 +1,20 @@
 <section class="wrapper {{Tour.color}}">
+  <button (click)="onOpenDetails()">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+      viewBox="0 0 128 128" xml:space="preserve" width="100%" height="100%">
+      <g class="circle">
+        <circle cx="50%" cy="50%" r="50%" fill="#ffffff"></circle>
+        <svg as-details-svg [Color]="Tour.color" x="15%" y="15%" width="70%" height="70%"></svg>
+      </g>
+    </svg>
+  </button>
+  <button (click)="onOpenMap()">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+      viewBox="0 0 128 128" xml:space="preserve" width="100%" height="100%">
+      <g class="circle">
+        <circle cx="50%" cy="50%" r="50%" fill="#ffffff"></circle>
+        <svg as-map-svg [Color]="Tour.color" x="15%" y="15%" width="70%" height="70%"></svg>
+      </g>
+    </svg>
+  </button>
 </section>
