--- a/src/app/components/sections/as-info/styles/as-info.component.scss
+++ b/src/app/components/sections/as-info/styles/as-info.component.scss
@@ -2,16 +2,21 @@
 @import '../../../../../styles/built-in-tags.scss';
 
 :host {
+  height: 100%;
+  width: 100%;
+  min-height: 40vh;
   display: flex;
+  align-items: center;
 }
 
 .wrapper {
+  height: 100%;
   display: flex;
   flex: 1;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding: 5% 2%;
+  padding: 5% 0%;
 
   .left {
     height: 100%;
@@ -32,12 +37,9 @@
     }
 
     .body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
       flex: 1;
       min-width: 240px;
+      overflow-y: auto;
     }
   }
 
@@ -45,5 +47,9 @@
     height: 100%;
     border-left-width: 1px;
     border-left-style: solid;
+    min-width: 70px;
+    width: 10%;
+    max-width: 350px;
+    padding: 10px;
   }
 }
