--- a/src/app/components/sections/as-action/styles/as-action.component.scss
+++ b/src/app/components/sections/as-action/styles/as-action.component.scss
@@ -1,12 +1,12 @@
 :host {
   max-height: 95%;
+  height: 100%;
   width: 95%;
   overflow: auto;
 }
 
 .modal-wrapper {
   width: 100%;
-  max-height: 95%;
   display: flex;
   flex-direction: column;
 
