Feat: #20 - Added leaflet markers for tour stops

--- a/src/app/components/sections/as-info/as-info-map/styles/as-info-map.component.scss
+++ b/src/app/components/sections/as-info/as-info-map/styles/as-info-map.component.scss
@@ -1,5 +1,6 @@
-@import '../../../../../../styles/palette.scss';
+
 @import '../../../../../../styles/built-in-tags.scss';
+@import '../../../../../../styles/palette.scss';
 
 :host {
   display: flex;
@@ -14,5 +15,10 @@
   #map {
     height: 100%;
     width: 100%;
+
+    .div-icon-leaflet {
+      background: none;
+      border: none;
+    }
   }
 }
