Feat: #22 - Added change language section and translations

--- a/src/app/components/as-main/as-main.component.html
+++ b/src/app/components/as-main/as-main.component.html
@@ -1,4 +1,9 @@
 <section>
-  <as-navbar></as-navbar>
+  <as-navbar (OnClick)="onToggle()"></as-navbar>
   <as-tours-list></as-tours-list>
+  <ng-container *ngIf="isMenuOpen">
+    <as-side-modal [side]="sides.LEFT">
+      <as-menu (OnClose)="onToggle()"></as-menu>
+    </as-side-modal>
+  </ng-container>
 </section>
