--- a/src/app/components/as-navbar/as-navbar.component.html
+++ b/src/app/components/as-navbar/as-navbar.component.html
@@ -1,4 +1,6 @@
 <div class="navbar">
-  <button class="hamburger-menu"></button>
-  <h3 class="title">Tours</h3>
+  <button class="menu" (click)="onClick()">
+    <svg as-menu-svg x="15%" y="15%" width="70%" height="70%" stroke-width="2"></svg>
+  </button>
+  <h3 class="title">Kalimera Tours</h3>
 </div>
