--- a/src/app/components/sections/as-email/as-email-processing/as-email-processing.component.html
+++ b/src/app/components/sections/as-email/as-email-processing/as-email-processing.component.html
@@ -3,6 +3,6 @@
     <div class="svg-container">
       <as-spinner-svg [Color]="Color"></as-spinner-svg>
     </div>
-    <span>{{Text}}</span>
+    <span>{{ translationsService.translate(Text) }}</span>
   </div>
 </section>
