--- a/src/app/components/sections/as-gallery/as-gallery.component.html
+++ b/src/app/components/sections/as-gallery/as-gallery.component.html
@@ -2,7 +2,7 @@
   <ul class="items">
     <ng-container *ngIf="Tour.imagesSignatures.length === 0">
       <li class="item">
-        <span>No images available</span>
+        <span>{{ translationsService.translate('No images available') }}</span>
       </li>
     </ng-container>
     <ng-container *ngFor="let path of Tour.imagesSignatures">
