--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -18,5 +18,21 @@ $color_fuchsia_pink_approx: #b752eb;
 $color_glicine_approx: #c57aeb;
 $color_plasma_trail_approx: #d29eec;
 
+$color_a: #181818;
+$color_b: #262626;
+$color_c: #323232;
+$color_d: #5c5555;
+
+$color_e: #c873f4;
+$color_f: #b752eb;
+$color_g: #c57aeb;
+$color_h: #d29eec;
+
 $light: #ffffff;
-$dark: #000000;
+$dark: #131111;
+
+$white: #ffffff;
+$black: #000000;
+
+$light-grey: #8a8a8a;
+$header-light-grey: #f0f0f0;
