--- a/src/app/components/modals/as-modal/styles/as-modal.component.scss
+++ b/src/app/components/modals/as-modal/styles/as-modal.component.scss
@@ -3,13 +3,14 @@
 
 :host {
   width: 100%;
-}
-
-.background {
+  height: 100%;
   position: fixed;
   z-index: 100;
   top: 0;
   left: 0;
+}
+
+.background {
   display: flex;
   justify-content: center;
   align-items: center;
