--- a/src/app/components/sections/as-email/as-email.component.html
+++ b/src/app/components/sections/as-email/as-email.component.html
@@ -7,23 +7,23 @@
 
   <!-- Spinner component -->
   <as-email-processing [ngClass]="{'slide-in': submitting, 'slide-out' : !submitting && (submitOk || submitError) }"
-    [Color]="Tour.color" [Text]="'Sending email...'"></as-email-processing>
+    [Color]="Tour.color" [Text]="'Sending email'"></as-email-processing>
 
   <!-- Success component -->
   <as-email-submission-result [ngClass]="{'slide-in': !submitting && submitOk && !submitError }" [Color]="Tour.color"
     [enableOk]="true" (OnOk)="onClose()">
-    <span>Email has been sent succesfully</span>
-    <span>Thanks for contacting us</span>
+    <span>{{ translationsService.translate('Email has been sent succesfully') }}</span>
+    <span>{{ translationsService.translate('Thanks for contacting us') }}</span>
   </as-email-submission-result>
 
   <!-- Error component -->
   <as-email-submission-result
     [ngClass]="{'slide-in': !submitting && !submitOk && submitError, 'slide-out' : retrying || !firstTime && !submitting && !submitOk && !submitError }"
     [Color]="Tour.color" [enableOk]="true" [enableRetry]="true" (OnOk)="onUndo()" (OnRetry)="onRetry()">
-    <span>Ouch, we could not send your email.</span>
-    <span>Please, retry or write us at</span>
+    <span>{{ translationsService.translate('Ouch, we could not send your email') }}.</span>
+    <span>{{ translationsService.translate('Please, retry or write us at') }}</span>
     <span><strong>{{email}}</strong>.</span>
-    <span>Let us know about this issue too.</span>
-    <span>We apologize for the inconvenient.</span>
+    <span>{{ translationsService.translate('Let us know about this issue too') }}.</span>
+    <span>{{ translationsService.translate('We apologize for the inconvenient') }}.</span>
   </as-email-submission-result>
 </section>
