--- a/src/app/components/sections/as-info/as-info-menu/as-info-menu.component.html
+++ b/src/app/components/sections/as-info/as-info-menu/as-info-menu.component.html
@@ -1,5 +1,5 @@
 <section class="wrapper {{Tour.color}}">
-  <button (click)="onOpenDetails()">
+  <button (click)="onOpenDetails()" [title]="translationsService.translate('See details')">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
       viewBox="0 0 128 128" xml:space="preserve" width="100%" height="100%">
       <g class="circle">
@@ -8,7 +8,7 @@
       </g>
     </svg>
   </button>
-  <button (click)="onOpenMap()">
+  <button (click)="onOpenMap()" [title]="translationsService.translate('See stops on the map')">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
       viewBox="0 0 128 128" xml:space="preserve" width="100%" height="100%">
       <g class="circle">
