--- a/src/app/components/as-menu/styles/as-menu.component.scss
+++ b/src/app/components/as-menu/styles/as-menu.component.scss
@@ -40,7 +40,6 @@
     background-color: transparent;
     display: flex;
     align-items: center;
-    gap: 5%;
     white-space: nowrap;
 
     svg {
@@ -54,22 +53,22 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding: 0% 5%;
     background-color: $color_c;
 
     .action-container {
       width: 100%;
-      height: 10%;
+      height: 11%;
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: left;
-      padding: 2% 0;
-      border-bottom: 1px solid $light;
+      padding: 3%;
+      border-bottom: 1px solid $color_d;
 
 
       button {
         width: 100%;
+        gap: 8%;
 
         svg {
         }
@@ -79,6 +78,7 @@
           display: flex;
           justify-content: left;
           color: $white;
+          font-size: 15px;
         }
       }
     }
