Feat: #28 - Added fade in-out modal animations

--- a/src/app/components/as-menu/as-menu.component.html
+++ b/src/app/components/as-menu/as-menu.component.html
@@ -17,7 +17,7 @@
 </section>
 
 <ng-container *ngIf="isModalOpen">
-  <as-modal (OnClose)="onModalClose()">
+  <as-modal (OnClose)="onModalClose()" [@fadeInOut]>
     <as-action [action]="currentAction" [color]="colors.DARK" (OnClose)="onModalClose()"></as-action>
   </as-modal>
 </ng-container>
